2009-09-21  Darren Kenny  <darren.kenny@sun.com>

	* help/C/nwam-manager.xml:
	  Update to latest version of OLH (09/16)
	* capplet/nwam_wireless_chooser.c, daemon/status_icon.c:
	  Point help items are appropriate locations in help documents.
	* capplet/nwam-manager-properties.ui:
	  Fix help button response code for wireless chooser dialog.

2009-09-21  Darren Kenny  <darren.kenny@sun.com>

	* capplet/nwam_rules_dialog.c: 
	  Fix defect#9656 where the selection of All or Any was possible when
	  only one condition was available.
	* common/nwamui_cond.c: 
	  Fix defect#9650 - change 'does not include' to 'do not include'
	* capplet/nwam_condition_vbox.h, capplet/nwam_condition_vbox.c: 
	  Several fixes:
	  - Hide selection of Location when setting conditions on a location.
	  - Don't call table_lines_free() when refreshing table since
	    table_lines_init() expects rows to still be there to add them to the
	    cache.
	  - Move reloading of ENM and LOC model to the table_lines_init()
	    function since otherwise adding a row emptied already visible ENM
	    and LOC selection combo boxes causing a crash later when clicking
	    OK since nothing was selected.
	  - Add some minimal validation to the rules on OK, so that we can
	    catch empty selections as above and check IP addresses again.
	* common/libnwamui.c: 
	  Change validation message dialog title to be more generic.

2009-09-21  Darren Kenny  <darren.kenny@sun.com>

	* capplet/nwam_env_pref_dialog.c: 
	  Fix defect#9649 where the nsswitch default button wasn't being
	  handled. 
	* nwam_core/usr/include/libnwam.h:
	  Update to latest version in 09/17 builds.

2009-09-18  Darren Kenny  <darren.kenny@sun.com>

	* common/libnwamui.c, common/libnwamui.h:
	  Change the ip validation function to be a more general entry
	  validation mechanism to allow it to be used for validation of
	  IPv4/6, BSSIDs and prefixes. Also provide better error message as a
	  result of this validation.