@@ -1,5 +1,12 @@
 2009-09-21  Darren Kenny  <darren.kenny@sun.com>
 
+	* nwam_core/usr/include/libnwam.h:
+	  Update to latest as of 09/21.
+	* common/nwamui_daemon.c: 
+	  Make changes necessary to build due to API change.
+
+2009-09-21  Darren Kenny  <darren.kenny@sun.com>
+
 	* help/C/nwam-manager.xml:
 	  Update to latest version of OLH (09/16)
 	* capplet/nwam_wireless_chooser.c, daemon/status_icon.c:
